docs/css/main.css
/* ... */
pre.prettyprint {
  padding: 10px;
  max-width: 660px; }

/* Submenu */
#subnav {
  position: absolute;
  top: 100px;
  left: 76%;
  background-color: #ffd;
  width: 24%;
  margin: 1em 0 0;
  padding: 0.25em;
  border: solid #ccc;
  border-width: .1em .1em .1em .1em; }

#subnav ul {
  margin: 0;
  padding: 0;
  list-style: none; }

#subnav li {
  margin: 0;
  padding: 2px 0 2px; }

#subnav a {
  font: 1em "Times New Roman", Roman, serif;
  margin: 0;
  padding: 0 0 0 26px;
  text-transform: uppercase;
  text-decoration: none;
  color: #000;
  white-space: nowrap;
  background: url(img/bulletOff.gif) no-repeat 10px 50%;
  display: block; }

#subnav ul ul a {
  padding: 0 0 0 46px;
  background-position: 30px 50%; }

#subnav ul ul ul a {
  padding: 0 0 0 66px;
  background-position: 50px 50%; }

#subnav ul ul ul ul a {
  padding: 0 0 0 86px;
  background-position: 70px 50%; }

#subnav ul ul ul ul ul a {
  padding: 0 0 0 106px;
  background-position: 90px 50%; }

#subnav li#current a {
  background-image: url(img/bulletOn.gif); }

#subnav li a:hover {
  background-image: url(img/bulletOn.gif); }

#help_content {
  max-width: 660px; }
  #help_content p {
    padding: 0;
    margin: 0 0 1em 0; }

@media (min-width: 992px) {
  div.help {
    min-width: 992px;
  }
}

pre.programtext {
  max-width: 660px; }

ul.across {
  width: 100%;
  display: block;
  list-style: none; }

ul.across li {
  float: left;
  display: block;
  width: 9em; }

